Fix top logo responsive design

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="assets/logo source files/logo1.png" alt="Emerald Psychology Logo">
+                <img src="assets/logo-source-files/logo4.svg" alt="Emerald Psychology Logo">
             </div>
             <button class="mobile-menu-toggle" aria-label="Toggle menu">
                 <span></span>
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <img src="assets/logo source files/logo1.png" alt="Emerald Psychology Logo" class="footer-logo">
+                    <img src="assets/logo-source-files/logo1.png" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
                     <p>Vaughan, Ontario</p>
                 </div>
