Fix bottom logo

--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <img src="assets/logo-source-files/logo1.png" alt="Emerald Psychology Logo" class="footer-logo">
+                    <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
                     <p>Vaughan, Ontario</p>
                 </div>
