Adding new content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="team.html">Our Team</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -32,7 +33,7 @@
             <h1>Emerald Psychology</h1>
             <h2>Dr. Kayla Yosipovich, C. Psych</h2>
             <p class="subtitle">Clinical Psychologist | Vaughan, Ontario</p>
-            <p class="hero-text">Compassionate psychological services for children, adolescents, and families</p>
+            <p class="hero-text">Providing Empathic and Evidence Based Therapy for Children and Adolescents</p>
             <a href="contact.html" class="cta-button">Get in Touch</a>
         </div>
     </section>
@@ -48,8 +49,8 @@
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" fill="currentColor"/>
                         </svg>
                     </div>
-                    <h3>Psychological Assessment</h3>
-                    <p>Comprehensive evaluations for children and adolescents to identify strengths and challenges</p>
+                    <h3>Individual Therapy for Children</h3>
+                    <p>Dr. Kayla Yosipovich provides personalized child therapy designed to meet your child's needs and strengths. Her primary goal is to ensure your child feels comfortable to talk about anything and everything.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -57,26 +58,8 @@
                             <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="currentColor"/>
                         </svg>
                     </div>
-                    <h3>Therapeutic Intervention</h3>
-                    <p>Evidence-based therapy for mood disorders, anxiety, emotional regulation, and interpersonal challenges</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 3L1 9l4 2.18v6L12 21l7-3.82v-6l2-1.09V17h2V9L12 3zm6.82 6L12 12.72 5.18 9 12 5.28 18.82 9zM17 15.99l-5 2.73-5-2.73v-3.72L12 15l5-2.73v3.72z" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3>School Consultation</h3>
-                    <p>Collaborative support with schools to help children and adolescents succeed academically and socially</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3>Parenting Support</h3>
-                    <p>Guidance and strategies to help parents navigate challenges and strengthen family relationships</p>
+                    <h3>Individual Therapy for Adolescents</h3>
+                    <p>Dr. Yosipovich provides tailored adolescent therapy to meet the adolescent at their level. She ensures your teenager feels comfortable and supported, validating their concerns and feelings.</p>
                 </div>
             </div>
         </div>
@@ -92,7 +75,7 @@
                 <div class="about-text">
                     <h2>Dr. Kayla Yosipovich</h2>
                     <p class="credentials">PSY.D. | Clinical Psychologist</p>
-                    <p>Dr. Kayla Yosipovich is a registered Clinical Psychologist with the College of Psychologists of Ontario, and a member of the Ontario Psychological Association. With over ten years of experience, she provides compassionate assessment and therapeutic intervention for children and adolescents.</p>
+                    <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process.</p>
                     <a href="about.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
@@ -112,7 +95,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
