--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Dr. Kayla Yosipovich | Emerald Psychology</title>
+    <title>Our Team | Emerald Psychology</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,16 +20,17 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="team.html" class="active">Our Team</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- About Hero -->
+    <!-- Team Hero -->
     <section class="page-hero">
         <div class="container">
-            <h1>About Dr. Kayla Yosipovich</h1>
+            <h1>Our Team</h1>
         </div>
     </section>
 
@@ -43,14 +44,16 @@
                 <div class="about-detail-text">
                     <h2>Dr. Kayla Yosipovich</h2>
                     <p class="credentials-large">PSY.D. | CLINICAL PSYCHOLOGIST</p>
-                    <p class="location">Office Location: Vaughan, Ontario</p>
+                    <p class="location">Office Location: Vaughan</p>
 
                     <div class="bio-content">
-                        <p>Dr. Kayla Yosipovich is a registered Clinical Psychologist with the College of Psychologists of Ontario, and a member of the Ontario Psychological Association. She graduated from Ferkauf Graduate School of Psychology with a Doctorate (PsyD) in Clinical Child Psychology and a Masters (MS) in School Psychology.</p>
+                        <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process. My primary mode of therapy is Cognitive Behaviour Therapy, which I tailor flexibly to the needs of each client. I believe in offering support through a multi-faceted approach; working individually with the child, coaching and work together with the parents throughout, and consulting with child's school as needed.</p>
 
-                        <p>Dr. Yosipovich has over ten years of experience providing assessment and therapeutic intervention for children and adolescents. Dr. Yosipovich has worked in inpatient outpatient clinical settings, and within the school system. Some of her experience includes her work at North York General Hospital, Toronto District School Board, North Shore-LIJ Hospital, and Leake and Watts Residential Treatment Center.</p>
+                        <p>I have extensive experience treating mood disorders, challenges in emotional regulation, behaviour struggles, and school related challenges. I am especially passionate about working with children and adolescents struggling with anxiety; including Generalized Anxiety Disorder, Obsessive-Compulsive Disorder, Separation Anxiety, Selective Mutism, and Specific Phobias. I am a strong proponent of involving parents in treatment, as I have seen that lasting change happens when parents are partners in the therapy process alongside their child.</p>
 
-                        <p>She treats mood and anxiety disorders, emotional regulation challenges, and interpersonal difficulties, and provides parenting support and school consultation.</p>
+                        <p>Prior to working in private practice, I spent three years as a School Psychologist with the Toronto District School Board, providing assessments to students, consulting with teachers and support staff, and working alongside parents to ensure their child's support at school. I completed my doctoral internship at North York General Hospital in the Child & Adolescent Mental Health Outpatient Clinic, providing outpatient evidence based therapy to adolescents in the community as well as adolescents in the Day Hospital program. My previous training experiences include work in a residential treatment centre, various hospital clinics, and school boards. I graduated from Ferkauf Graduate School of Psychology with a Masters Degree (MS) in School Psychology, and with my Doctorate (PsyD) in Clinical Child Psychology in 2018.</p>
+
+                        <p>In my free time, I enjoy spending time with my husband and children, bike riding, spending time in nature, and baking.</p>
                     </div>
                 </div>
             </div>
@@ -88,11 +91,14 @@
                 <div class="qual-card">
                     <h3>Areas of Expertise</h3>
                     <ul>
-                        <li>Mood & Anxiety Disorders</li>
+                        <li>Generalized Anxiety Disorder</li>
+                        <li>Obsessive-Compulsive Disorder</li>
+                        <li>Separation Anxiety</li>
+                        <li>Selective Mutism</li>
+                        <li>Specific Phobias</li>
+                        <li>Mood Disorders</li>
                         <li>Emotional Regulation</li>
-                        <li>Interpersonal Difficulties</li>
-                        <li>Parenting Support</li>
-                        <li>School Consultation</li>
+                        <li>Behaviour Struggles</li>
                     </ul>
                 </div>
             </div>
@@ -121,7 +127,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
