--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h2>Dr. Kayla Yosipovich</h2>
                     <p class="credentials">PSY.D. | Clinical Psychologist</p>
                     <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process.</p>
-                    <a href="about.html" class="secondary-button">Learn More</a>
+                    <a href="team.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
