--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Emerald Psychology</h1>
+            <h1>Providing Empathic and Evidence Based Therapy for Children and Adolescents</h1>
             <h2>Dr. Kayla Yosipovich, C. Psych</h2>
             <p class="subtitle">Clinical Psychologist | Vaughan, Ontario</p>
-            <p class="hero-text">Providing Empathic and Evidence Based Therapy for Children and Adolescents</p>
             <a href="contact.html" class="cta-button">Get in Touch</a>
         </div>
     </section>
