--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Emerald Psychology</title>
+    <link rel="icon" type="image/svg+xml" href="assets/logo-source-files/SVG/icon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
