feedback from Kayla

--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,6 @@
                         </div>
                     </div>
 
-                    <div class="professional-info">
-                        <h3>Professional Registration</h3>
-                        <p>Dr. Kayla Yosipovich is a registered Clinical Psychologist with the College of Psychologists of Ontario and a member of the Ontario Psychological Association.</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -175,7 +171,7 @@
                 <div class="footer-section">
                     <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
-                    <p>Vaughan, Ontario</p>
+                    <p>North York, Ontario</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
