--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content">
             <h1>Providing Empathic and Evidence Based Therapy for Children and Adolescents</h1>
             <h2>Dr. Kayla Yosipovich, C. Psych</h2>
-            <p class="subtitle">Clinical Psychologist | Vaughan, Ontario</p>
+            <p class="subtitle">Clinical Psychologist | North York, Ontario</p>
             <a href="contact.html" class="cta-button">Get in Touch</a>
         </div>
     </section>
@@ -89,7 +89,7 @@
                 <div class="footer-section">
                     <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
-                    <p>Vaughan, Ontario</p>
+                    <p>North York, Ontario</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
