--- a/resources.html
+++ b/resources.html
@@ -182,7 +182,7 @@
                 <div class="footer-section">
                     <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
-                    <p>Vaughan, Ontario</p>
+                    <p>North York, Ontario</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
