--- a/services.html
+++ b/services.html
@@ -67,27 +67,6 @@
         </div>
     </section>
 
-    <!-- Therapy Approach Section -->
-    <section class="about-preview">
-        <div class="container">
-            <h2 class="section-title">Our Therapeutic Approach</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <h3>Cognitive Behaviour Therapy (CBT)</h3>
-                    <p>My primary mode of therapy is Cognitive Behaviour Therapy, which I tailor flexibly to the needs of each client. CBT helps children and adolescents identify and change negative thought patterns and behaviors.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Multi-Faceted Support</h3>
-                    <p>I believe in offering support through a multi-faceted approach; working individually with the child, coaching and working together with the parents throughout, and consulting with the child's school as needed.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Parent Partnership</h3>
-                    <p>I am a strong proponent of involving parents in treatment, as I have seen that lasting change happens when parents are partners in the therapy process alongside their child.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Conditions Treated Section -->
     <section class="qualifications">
         <div class="container">
@@ -151,7 +130,7 @@
                 <div class="footer-section">
                     <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
-                    <p>Vaughan, Ontario</p>
+                    <p>North York, Ontario</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
