--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
                 <div class="about-detail-text">
                     <h2>Dr. Kayla Yosipovich</h2>
                     <p class="credentials-large">PSY.D. | CLINICAL PSYCHOLOGIST</p>
-                    <p class="location">Office Location: Vaughan</p>
+                    <p class="location">Office Location: North York</p>
 
                     <div class="bio-content">
                         <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process. My primary mode of therapy is Cognitive Behaviour Therapy, which I tailor flexibly to the needs of each client. I believe in offering support through a multi-faceted approach; working individually with the child, coaching and work together with the parents throughout, and consulting with child's school as needed.</p>
@@ -54,53 +54,10 @@
 
                         <p>Prior to working in private practice, I spent three years as a School Psychologist with the Toronto District School Board, providing assessments to students, consulting with teachers and support staff, and working alongside parents to ensure their child's support at school. I completed my doctoral internship at North York General Hospital in the Child & Adolescent Mental Health Outpatient Clinic, providing outpatient evidence based therapy to adolescents in the community as well as adolescents in the Day Hospital program. My previous training experiences include work in a residential treatment centre, various hospital clinics, and school boards. I graduated from Ferkauf Graduate School of Psychology with a Masters Degree (MS) in School Psychology, and with my Doctorate (PsyD) in Clinical Child Psychology in 2018.</p>
 
+                        <p>I am a registered Clinical Psychologist with the College of Psychologists of Ontario and a member of the Ontario Psychological Association.</p>
+
                         <p>In my free time, I enjoy spending time with my husband and children, bike riding, spending time in nature, and baking.</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Qualifications Section -->
-    <section class="qualifications">
-        <div class="container">
-            <h2 class="section-title">Education & Professional Affiliations</h2>
-            <div class="qualifications-grid">
-                <div class="qual-card">
-                    <h3>Education</h3>
-                    <ul>
-                        <li><strong>Doctorate (PsyD)</strong> in Clinical Child Psychology<br>Ferkauf Graduate School of Psychology</li>
-                        <li><strong>Masters (MS)</strong> in School Psychology<br>Ferkauf Graduate School of Psychology</li>
-                    </ul>
-                </div>
-                <div class="qual-card">
-                    <h3>Professional Registration</h3>
-                    <ul>
-                        <li>College of Psychologists of Ontario</li>
-                        <li>Ontario Psychological Association</li>
-                    </ul>
-                </div>
-                <div class="qual-card">
-                    <h3>Clinical Experience</h3>
-                    <ul>
-                        <li>North York General Hospital</li>
-                        <li>Toronto District School Board</li>
-                        <li>North Shore-LIJ Hospital</li>
-                        <li>Leake and Watts Residential Treatment Center</li>
-                    </ul>
-                </div>
-                <div class="qual-card">
-                    <h3>Areas of Expertise</h3>
-                    <ul>
-                        <li>Generalized Anxiety Disorder</li>
-                        <li>Obsessive-Compulsive Disorder</li>
-                        <li>Separation Anxiety</li>
-                        <li>Selective Mutism</li>
-                        <li>Specific Phobias</li>
-                        <li>Mood Disorders</li>
-                        <li>Emotional Regulation</li>
-                        <li>Behaviour Struggles</li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -122,7 +79,7 @@
                 <div class="footer-section">
                     <img src="assets/logo-source-files/logo1-white.svg" alt="Emerald Psychology Logo" class="footer-logo">
                     <p>Emerald Psychology</p>
-                    <p>Vaughan, Ontario</p>
+                    <p>North York, Ontario</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
