Kayla review part II

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,8 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="team.html">Our Team</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -139,31 +138,6 @@
         </div>
     </section>
 
-    <!-- FAQ Section -->
-    <section class="faq-section">
-        <div class="container">
-            <h2 class="section-title">Frequently Asked Questions</h2>
-            <div class="faq-grid">
-                <div class="faq-item">
-                    <h3>What ages do you work with?</h3>
-                    <p>Dr. Yosipovich specializes in working with children and adolescents, providing both assessment and therapeutic services.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Do you accept insurance?</h3>
-                    <p>Many insurance plans cover psychological services. Please contact your insurance provider to verify your coverage and benefits.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>How long is a typical session?</h3>
-                    <p>Session length varies depending on the type of service. Initial assessments may take longer than follow-up therapy sessions.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>What should I bring to the first appointment?</h3>
-                    <p>Please bring any relevant medical or educational records, a list of current medications, and insurance information if applicable.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -177,9 +151,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
