--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="team.html">Our Team</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -38,47 +37,40 @@
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section class="services">
+    <!-- About Section -->
+    <section class="about-detail">
         <div class="container">
-            <h2 class="section-title">Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3>Individual Therapy for Children</h3>
-                    <p>Dr. Kayla Yosipovich provides personalized child therapy designed to meet your child's needs and strengths. Her primary goal is to ensure your child feels comfortable to talk about anything and everything.</p>
+            <div class="about-detail-content">
+                <div class="about-detail-image">
+                    <img src="assets/headshot/dr.-kayla-yosipovich-image.webp" alt="Dr. Kayla Yosipovich">
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="currentColor"/>
-                        </svg>
+                <div class="about-detail-text">
+                    <h2>Dr. Kayla Yosipovich</h2>
+                    <p class="credentials-large">PSY.D. | CLINICAL PSYCHOLOGIST</p>
+                    <p class="location">Office Location: North York</p>
+
+                    <div class="bio-content">
+                        <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process. My primary mode of therapy is Cognitive Behaviour Therapy, which I tailor flexibly to the needs of each client. I believe in offering support through a multi-faceted approach; working individually with the child, coaching and work together with the parents throughout, and consulting with child's school as needed.</p>
+
+                        <p>I have extensive experience treating mood disorders, challenges in emotional regulation, behaviour struggles, and school related challenges. I am especially passionate about working with children and adolescents struggling with anxiety; including Generalized Anxiety Disorder, Obsessive-Compulsive Disorder, Separation Anxiety, Selective Mutism, and Specific Phobias. I am a strong proponent of involving parents in treatment, as I have seen that lasting change happens when parents are partners in the therapy process alongside their child.</p>
+
+                        <p>Prior to working in private practice, I spent three years as a School Psychologist with the Toronto District School Board, providing assessments to students, consulting with teachers and support staff, and working alongside parents to ensure their child's support at school. I completed my doctoral internship at North York General Hospital in the Child & Adolescent Mental Health Outpatient Clinic, providing outpatient evidence based therapy to adolescents in the community as well as adolescents in the Day Hospital program. My previous training experiences include work in a residential treatment centre, various hospital clinics, and school boards. I graduated from Ferkauf Graduate School of Psychology with a Masters Degree (MS) in School Psychology, and with my Doctorate (PsyD) in Clinical Child Psychology in 2018.</p>
+
+                        <p>I am a registered Clinical Psychologist with the College of Psychologists of Ontario and a member of the Ontario Psychological Association.</p>
+
+                        <p>In my free time, I enjoy spending time with my husband and children, bike riding, spending time in nature, and baking.</p>
                     </div>
-                    <h3>Individual Therapy for Adolescents</h3>
-                    <p>Dr. Yosipovich provides tailored adolescent therapy to meet the adolescent at their level. She ensures your teenager feels comfortable and supported, validating their concerns and feelings.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- About Preview Section -->
-    <section class="about-preview">
+    <!-- CTA Section -->
+    <section class="cta-section">
         <div class="container">
-            <div class="about-content">
-                <div class="about-image">
-                    <img src="assets/headshot/dr.-kayla-yosipovich-image.webp" alt="Dr. Kayla Yosipovich">
-                </div>
-                <div class="about-text">
-                    <h2>Dr. Kayla Yosipovich</h2>
-                    <p class="credentials">PSY.D. | Clinical Psychologist</p>
-                    <p>Welcome. My name is Dr. Kayla Yosipovich and I am a Clinical Child & Adolescent Psychologist. I have been working in private practice for seven years, working exclusively with children and adolescents. My priority within therapy is to ensure your family feels comfortable and supported throughout the therapy process.</p>
-                    <a href="team.html" class="secondary-button">Learn More</a>
-                </div>
-            </div>
+            <h2>Ready to Get Started?</h2>
+            <p>Contact us today to learn more about our services and schedule a consultation.</p>
+            <a href="contact.html" class="cta-button">Contact Us</a>
         </div>
     </section>
 
@@ -95,9 +87,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
